Changes to some files, that were causing problems after deploy to AWS Elastic Beanstalk. Changes mainly to relative paths for views in controllers and some templates. Changes forced modification of some of the tests also.