@@ -12,6 +12,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.test.context.junit4.SpringRunner;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -45,7 +46,7 @@ public class FieldOfStudyServiceTest {
         when(fieldOfStudyRepository.findById(fieldOfStudy.getId()))
                 .thenReturn(biology);
         when(fieldOfStudyRepository.findAll())
-                .thenReturn(List.of(fieldOfStudy));
+                .thenReturn(Arrays.asList(fieldOfStudy));
     }
 
     @Test
