@@ -12,6 +12,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.test.context.junit4.SpringRunner;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -84,11 +85,11 @@ public class StudentServiceTest {
         when(studentRepository.findById(marc.getId()))
                 .thenReturn(testerStudent);
         when(studentRepository.findAll())
-                .thenReturn(List.of(marc));
+                .thenReturn(Arrays.asList(marc));
         when(studentRepository.searchForStudent(marc.getId()))
-                .thenReturn(List.of(marc));
+                .thenReturn(Arrays.asList(marc));
         when(studentRepository.searchForStudent("arc"))
-                .thenReturn(List.of(marc));
+                .thenReturn(Arrays.asList(marc));
     }
 
     @Test
